--- a/app/src/main/res/layout/activity_patient_bookings.xml
+++ b/app/src/main/res/layout/activity_patient_bookings.xml
@@ -4,20 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PatientConsultationHistory">
+    tools:context=".PatientBookings">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:id="@+id/titleText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Make A New Booking"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"/>
+            android:text="Select a Specialist"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:textSize="36dp"
+            android:textColor="@android:color/black"/>
+
+
+        <!-- Recycler view Object, this will allow for the user to scroll through a list of items -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="2dp"
+            android:layout_below="@+id/titleText"
+            android:background="@drawable/border_set_patient_list"
+            android:scrollbars="vertical" />
+
+        <TextView
+            android:id="@+id/testView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/recyclerView"
+            android:textSize="16sp"/>
 
     </RelativeLayout>
-
 </FrameLayout>
