--- a/app/src/main/res/layout/activity_d_home_page.xml
+++ b/app/src/main/res/layout/activity_d_home_page.xml
@@ -41,7 +41,7 @@
             android:id="@+id/testbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Consult Form(Test)"
+            android:text="Consult Form"
             android:background="@color/gradStart"
             android:padding="4dp"
             android:textColor="#FFFFFF"
