--- a/app/src/main/res/layout/activity_doc_type_list.xml
+++ b/app/src/main/res/layout/activity_doc_type_list.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="2dp"
-        android:layout_below="@+id/titleText"
+        android:layout_below="@+id/dt"
         android:scrollbars="vertical" />
 
     <TextView
